merge 2.7.x into 2.3.x: sync code logic (JDK 8 compatibility, OkHttp, POJOs)